Nearly final candidate draft with all content and sidebars. The perfectionist in me still wants to get some diagrams to be smaller so it flows better.

--- a/sidebars/c2-normal-workflow.textile
+++ b/sidebars/c2-normal-workflow.textile
@@ -1,5 +1,5 @@
-h3. Normal Workflow Screencast
+h4. Normal Workflow Screencast
 
-The second screencast we've provided is 'Normal Workflow in Git', which demonstrates how to setup your '.gitignore' file, how to use and interpret 'git status' output, how to add and remove files from your index, how to commit and what git does in the object database during these operations.
+The second screencast we've provided is _Normal Workflow in Git_, which demonstrates how to setup your @.gitignore@ file, how to use and interpret @git status@ output, how to add and remove files from your index, how to commit and what git does in the object database during these operations.
 
 movie. c2-normal-workflow.mov
