--- a/sidebars/c5-git-browsing.textile
+++ b/sidebars/c5-git-browsing.textile
@@ -1,5 +1,5 @@
-h3. Git Object Browsing Screencast
+h4. Git Object Browsing Screencast
 
-In this screencast, we show how to browse and inspect the raw git objects.  The major tools covered are the 'git cat-file' and 'git ls-tree' commands to inspect the object contents, and then we cover some of the included graphical browsers - 'gitk' and 'gitweb'.
+In this screencast, we show how to browse and inspect raw Git objects.  The major tools covered are the @git cat-file@ and @git ls-tree@ commands to inspect the object contents, and then we cover some of the included graphical browsers, @gitk@ and @gitweb@.
 
 movie. c5-git-browsing.mov
