--- a/sidebars/c1-init.textile
+++ b/sidebars/c1-init.textile
@@ -1,7 +1,7 @@
-h3. Setup, Init and Cloning Screencast
+h4. Setup, Init and Cloning Screencast
 
-I have produced a series of short screencasts demonstrating the topics of several of the chapters in this book, so you can see them in practice on a real command line. You should be able to download these movies with this book from the Peepcode website.
+I have produced a series of short screencasts demonstrating the topics of several of the chapters in this book so you can see them in practice on a real command line. You should be able to download these movies with this book from the PeepCode website.
 
-The first in this series is 'Git Setup, Initialization and Cloning' and shows you how to setup your git configuration, how to initialize a new repository and how to clone an existing repository over both the git transport and the HTTP transport.
+The first in this series is _Git Setup, Initialization and Cloning_ and shows you how to setup your Git configuration, how to initialize a new repository and how to clone an existing repository over both the Git transport and the HTTP transport.
 
 movie. c1-init.mov
