--- a/sidebars/c4-git-log.textile
+++ b/sidebars/c4-git-log.textile
@@ -1,5 +1,5 @@
-h3. Git Log Options Screencast
+h4. Git Log Options Screencast
 
-The next screencast is on 'Git Log', which demonstrates most of the major features and options to the 'git log' command.  It includes showing the 'stat', 'short-stat' and 'name-stat' options, the '--pretty' options, the 'since' and 'until' limiters, the path limiter and author field searching.
+The next screencast is on @git log@, which demonstrates most of the major features and options to the @git log@ command.  It includes showing the @stat@, @short-stat@ and @name-stat@ options, the @--pretty@ options, the @since@ and @until@ limiters, the path limiter and author field searching.
 
 movie. c4-git-log.mov
