--- a/text/s1-c06-branching-and-merging.textile
+++ b/text/s1-c06-branching-and-merging.textile
@@ -2,11 +2,11 @@ h2. Branching and Merging
 
 Here we come to one of the real strengths of Git, cheap inline branching.  This is a feature that truly sets it apart and will likely change the way you think about developing code once you get used to it.
 
-When you are working on code in Git, storing trees in any state and keeping pointers to them is very simple, as we've seen.  In fact, in Git the act of creating a new branch is simply writing a file in the '.git/refs/heads' directory that has the SHAof the last commit for that branch.  
+When you are working on code in Git, storing trees in any state and keeping pointers to them is very simple, as we've seen.  In fact, in Git the act of creating a new branch is simply writing a file in the @.git/refs/heads@ directory that has the SHA-1 of the last commit for that branch.  
 
-note.  Creating a branch is nothing more than just writing 40 characters to a file
+note. Creating a branch is nothing more than just writing 40 characters to a file.
 
-Switching to that branch simply means having Git make your working directory look like the tree that SHA points to and updating the HEAD file so each commit from that point on moves that branch pointer forward (in other words, it changes the 40 characters in '.git/refs/heads/[current_branch_name]' be the SHA of your last commit).
+Switching to that branch simply means having Git make your working directory look like the tree that SHA-1 points to and updating the HEAD file so each commit from that point on moves that branch pointer forward (in other words, it changes the 40 characters in @.git/refs/heads/[current_branch_name]@ be the SHA-1 of your last commit).
 
 Now, let's see how Git handles branching, fetching and merging operations abstractly. For the following illustrations, we will represent the entire tree and the commit it points to as a single object. 
 
@@ -14,15 +14,15 @@ Now, let's see how Git handles branching, fetching and merging operations abstra
 
 h3. Simple Case
 
-Suppose that we work on a project for a while, then we get an idea for something that may not work out, but we want to do a quick proof-of-concept.  We create a new branch called 'experiment' off of our main branch, which is by convention called 'master'.  We then switch to the new branch and create a few commits.
+Suppose that we work on a project for a while, then we get an idea for something that may not work out, but we want to do a quick proof-of-concept.  We create a new branch called @experiment@ off of our main branch, which is by convention called @master@.  We then switch to the new branch and create a few commits.
 
 !vector/Branch_Story1.eps!
 
-Then, our boss comes in and says we need a hot fix to production.  So we switch back to our 'master' branch, make the change, push the release and then tag the new commit with the release number. Then we go back to our 'experiment' branch, continue working and commit again.
+Then, our boss comes in and says we need a hot fix to production.  So we switch back to our @master@ branch, make the change, push the release and then tag the new commit with the release number. Then we go back to our @experiment@ branch, continue working and commit again.
 
 !vector/Branch_Story2.eps!
 
-At this point, we show the new branch code to our co-workers and everyone likes the new changes. We decide we want to merge them back into our main branch, so we merge the changes and delete our 'experiment' branch.  Our history of commit objects now looks like this:
+At this point, we show the new branch code to our co-workers and everyone likes the new changes. We decide we want to merge them back into our main branch, so we merge the changes and delete our @experiment@ branch.  Our history of commit objects now looks like this:
 
 !vector/Branch_Story3.eps!
 
@@ -58,7 +58,7 @@ Perfectly fine, but it can get a little confusing when you litter the history wi
 
 This is where the rebasing command comes in.  With rebase, Git will checkout the _upstream branch_, in this case, Jen's @master@ branch, and then replay all the changes you've done since you forked on top of those files, as if you had forked your work off at _that_ point and done all your changes, rather than earlier.
 
-Rebase will literally produce a series of patch files of your work and start applying them to the upstream branch, automatically making new commits with the same messages as before and orphaning your older ones.  These objects can then be removed, since nothing points to them, when you run the garbage collection tools (see "The Care and Feeding of Git" chapter).
+Rebase will literally produce a series of patch files of your work and start applying them to the upstream branch, automatically making new commits with the same messages as before and orphaning your older ones.  These objects can then be removed, since nothing points to them, when you run the garbage collection tools (see "The Care and Feeding of Git" section).
 
 So let's see what happens if we rebase rather than merge in the same scenario.  Here we have our first merge and we can see that it orphans _Commit 1_ and applies the changes between _Commit 0_ and _Commit 1_ to the files in _Remote Commit 1_, creating a new _Commit 2_.
 
