--- a/text/s2-c11-distributed-workflow.textile
+++ b/text/s2-c11-distributed-workflow.textile
@@ -2,7 +2,7 @@ h2. Distributed Workflow Examples
 
 Now we've gone over most of the basic commands that you'll use on a day to day basis as a single developer.  This chapter covers some examples of what you will use in order to collaborate with other developers on a code base.
 
-todo. sidebar:c8-dist-workflow.textile
+sidebar. c8-dist-workflow.textile
 
 h3. Cloning
 
